--- a/kopi.html
+++ b/kopi.html
@@ -21,7 +21,7 @@
     <!-- Navbar Start -->
     <nav>
       <div class="navbar">
-        <a href="#" class="navbar-logo">kenangan<span>indah</span>.</a>
+        <a href="#" class="navbar-logo">kenangan<span>indah</span></a>
         <div class="navbar-nav">
           <a href="#home">Home</a>
           <a href="#about">Tentang Kami</a>
